<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_above="@+id/ll_login_input_container"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/user_male_ic" />


    <LinearLayout
        android:id="@+id/ll_login_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="12dp">

        <EditText
            android:id="@+id/et_login_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:hint="@string/login_account_input_hint"
            android:padding="12dp" />

        <EditText
            android:id="@+id/et_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:hint="@string/login_pwd_input_hint"
            android:padding="12dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_login_input_container"
        android:padding="12dp">

        <Button
            android:id="@+id/btn_login_login"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:background="@drawable/btn_login_bg_selector"
            android:textColor="#424242"
            android:textSize="14sp"
            android:text="@string/login_login" />

        <TextView
            android:id="@+id/tv_login_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_bg_selector"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingTop="12dp"
            android:text="@string/login_sign_in"
            android:textSize="14sp"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</RelativeLayout>