<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/app_title_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="12dp"
            android:text="@string/setup_title"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_setup_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:text="@string/setup_confirm"
            android:textColor="#FAFAFA"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ll_setup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:text="@string/setup_name"
                android:textColor="@color/app_title_bar"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_setup_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_setup_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_setup_name"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:text="@string/setup_sex"
                android:textColor="@color/app_title_bar"
                android:textSize="18dp" />

            <RadioGroup
                android:id="@+id/rg_setup_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_setup_male"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/rb_bg_selector"
                    android:button="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/setup_male"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/rb_setup_female"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="60dp"
                    android:background="@drawable/rb_bg_selector"
                    android:button="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/setup_female"
                    android:textSize="14dp" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_setup_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_setup_sex"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:text="@string/setup_age"
                android:textColor="@color/app_title_bar"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_setup_age"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:inputType="number"
                android:maxLength="2"
                android:singleLine="true" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_setup_age"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_setup_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:text="@string/setup_sign"
                android:textColor="@color/app_title_bar"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_setup_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_setup_sign"
                android:layout_below="@+id/tv_setup_sign"
                android:layout_marginRight="12dp"
                android:maxLines="8" />


        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>