<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/app_title_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="12dp"
            android:text="@string/info_title"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_info_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:text="@string/common_back"
            android:textColor="#FAFAFA"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_info_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:text="@string/common_more"
            android:textColor="#FAFAFA"
            android:textSize="16sp"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:background="#FAFAFA"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_info_ic"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="12dp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/info_name"
                android:textColor="#212121"
                android:singleLine="true"
                android:maxLength="6"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_info_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_info_name"
                android:layout_marginLeft="24dp"
                android:layout_toRightOf="@+id/tv_info_name"
                android:textColor="#212121"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_info_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_info_sex"
                android:layout_marginLeft="18dp"
                android:layout_toRightOf="@+id/tv_info_sex"
                android:textColor="#212121"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_info_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_info_name"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="12dp"
                android:textColor="#212121"
                android:textSize="14dp" />

        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:id="@+id/tv_info_chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg_selector"
            android:gravity="center"
            android:text="@string/info_send"
            android:textColor="#FAFAFA"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_info_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg_selector"
            android:gravity="center"
            android:text="@string/info_add"
            android:textColor="#FAFAFA"
            android:textSize="16sp"
            android:visibility="gone" />

    </FrameLayout>

</LinearLayout>