<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/app_title_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_title"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_add_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:text="@string/common_back"
            android:textColor="#FAFAFA"
            android:textSize="16sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_add_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/et_bg_selector"
                android:hint="@string/add_account_input_hint"
                android:inputType="number"
                android:maxLength="11"
                android:padding="12dp"
                android:singleLine="true" />


            <ImageView
                android:id="@+id/iv_add_add"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:alpha="0.8"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@mipmap/add_search_ic" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>